--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <section class="aui-scrollView">
                 <div class="aui-show-content">
                     <div class="aui-show-user">
-                        <img src="index_data/user-001.png" alt="">
+                        <img src="./index_data/user-001.png" alt="">
                     </div>
                 </div>
                 <div class="aui-show-head">
@@ -44,15 +44,20 @@
                     <p>梦想当码农</p>
                 </div>
                 <div class="aui-show-button b-line">
-                    <a href="javascript:;"><i class="icon icon-add"></i>关注</a>
-                    <a href="javascript:;" class="aui-show-border">私信</a>
+                    <a target=blank href=tencent://message/?uin=2724541629&Site=im.qq.com&Menu=yes><i class="icon icon-add">
+                    	
+                    </i>关注</a>
+                    <a target=blank href=tencent://message/?uin=2724541629&Site=im.qq.com&Menu=yes class="aui-show-border">私信</a>
                 </div>
                 <div class="aui-flex b-line">
                     <div class="aui-show-doctor">
                         <i class="icon icon-doctor"></i>Java小白
                     </div>
                     <div class="aui-flex-box"></div>
-                    <div class="aui-show-arrow">详细资料</div>
+                    <div class="aui-show-arrow">
+                    	<a target=blank href=tencent://message/?uin=2724541629&Site=im.qq.com&Menu=yes class="aui-show-border">
+                    	详细资料
+                    </a></div>
                 </div>
                 <div class="aui-show-list b-line">
                     <div class="aui-flex">
@@ -124,9 +129,9 @@
 
                     </div>
                     <div class="aui-show-arrow">
-                        <img src="index_data/icon-tag-001.png" alt="">
-                        <img src="index_data/icon-tag-002.png" alt="">
-                        <img src="index_data/icon-tag-003.png" alt="">
+                        <img src="./index_data/icon-tag-001.png" alt="">
+                        <img src="./index_data/icon-tag-002.png" alt="">
+                        <img src="./index_data/icon-tag-003.png" alt="">
                     </div>
                 </div>
                 <div class="divHeight"></div>
