--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
                             <i class="icon icon-book"></i>
                         </div>
                         <div class="aui-flex-box">
-                            <b>任小龙--Java大神之路</b>
+                            
+<a href="https://www.bilibili.com/video/av32985278?from=search&seid=6098448914236253594" alt="点击开启">
+        <b>
+任小龙--Java大神之路</b><a/>
                         </div>
                     </div>
                     <div class="aui-flex">
